2008-01-25  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.13.3 release.
	* download.html: Ditto, and added Windows/Mac section

2008-12-17  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.12.2 release.
	* download.html: Ditto.

2008-09-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Linkify "Tasque".

2008-09-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.12.0 release.
	* download.html: Ditto.

2008-08-21  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.11.3 release.
	* download.html: Ditto.

2008-08-18  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.11.2 release.
	* download.html: Ditto.

2008-08-04  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.11.1 release, removed old cruft.
	* download.html: Ditto.

2008-05-12  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.11.0 release.
	* download.html: Ditto.

2008-03-10  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.10.0 release.
	* download.html: Ditto.

2008-03-03  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.9.8 release.
	* download.html: Ditto.

2008-01-18  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.9.4 release.
	* download.html: Ditto.

2007-12-01  Ricky Zhou  <ricky.zhou@gmail.com>
	* index.html: Fix closing li tag, as mentioned in bug #500918.  

2007-10-15  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.8.1 release.
	* download.html: Ditto.

2007-09-17  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.8.0 release.
	* download.html: Ditto.

2007-08-13  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* index.html: Updated for 0.7.4 release.
	* download.html: Ditto.

2007-08-05  Sandy Armstrong  <sanfordarmstrong@gmail.com>
