@@ -144,6 +144,12 @@
       an MSI installer for Windows and a DMG disk image for Mac. This version is likely to
       have bugs. Please help us to track'em down. Visit the
       <a href="./getinvolved.html">Get involved</a> page.</p>
+
+	<p>Please follow installation instructions for
+	<a href="http://live.gnome.org/Tomboy/Installing/Windows">Windows</a>
+	or <a href="http://live.gnome.org/Tomboy/Installing/Mac">Mac OS X</a>,
+	as necessary.</p>
+
       
     <h3>Latest release</h3>
       <div class="download">
