@@ -1,3 +1,7 @@
+2008-01-26  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* download.html: Added links to installation instructions.
+
 2008-01-25  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* index.html: Updated for 0.13.3 release.
